syntax="proto3";
package user;

option go_package ="./user";

message GetUserInfoReq {
    int32 userID = 1; //用户ID
}

message GetUserInfoRsp {
    string name = 1; //用户姓名
}

service UserInfo {
    rpc  GetUserInfo (GetUserInfoReq) returns (GetUserInfoRsp);
} 